--- a/application/views/data/index.pug
+++ b/application/views/data/index.pug
@@ -5,7 +5,7 @@ block append header
 
 block content
   .container-fluid
-    if(language == 0)
+    if(language == 'en')
       h1.mb-4 List Data
     else 
       h1.mb-4 Listar Dados
