--- a/application/views/home/home.pug
+++ b/application/views/home/home.pug
@@ -16,7 +16,7 @@ block content
                   .col-xl-550.col-md-10.mb-4
                       .col.mr-6
                         .align.center.mb-10.inline-block
-                          if(language == 0)
+                          if(language == 'en')
                             a.btn.btn-success.btn-user.btn-block.btn-lg.mr-0.px-5(href='/data/new')
                                 | Insert DNA
                           else
@@ -28,7 +28,7 @@ block content
                   .col-xl-550.col-md-10.mb-4
                       .col.mr-6
                         .align.center.mb-10.inline-block
-                          if(language == 0)
+                          if(language == 'en')
                             a.btn.btn-success.btn-user.btn-block.btn-lg.mr-0.px-5(href='/processable-data')
                               | Process DNA  
                           else
@@ -40,7 +40,7 @@ block content
                   .col-xl-550.col-md-10.mb-4
                       .col.mr-6
                         .align.center.mb-10.inline-block
-                          if(language == 0)
+                          if(language == 'en')
                             a.btn.btn-success.btn-user.btn-block.btn-lg.mr-0.px-5(href='/data-buy')
                               | Buy DNA
                           else
