--- a/application/views/operation/show.pug
+++ b/application/views/operation/show.pug
@@ -16,7 +16,7 @@ block content
                 = operation.details.data_id
           .form-row
             .form-group.col-md-6
-              if(language == 0)
+              if(language == 'en')
                 label.mb-1(for='type') Type
               else 
                 label.mb-1(for='type') Tipo
