--- a/application/views/processableData/components/data-show-form.pug
+++ b/application/views/processableData/components/data-show-form.pug
@@ -1,13 +1,13 @@
 .card-body
   form
     .form-group
-      if(language == 0)
+      if(language == 'en')
         label.mb-1(for='title') Title
       else 
         label.mb-1(for='title') Título
       input#title.form-control(disabled type='text' value= data.metadata.title)
     .form-group
-      if(language == 0)
+      if(language == 'en')
         label.mb-1(for='description') Description
       else 
         label.mb-1(for='description') Descrição
@@ -16,7 +16,7 @@
     h5.mb-3 Details
     if (data.process_request_id)
       .form-group
-        if(language == 0)
+        if(language == 'en')
           label.mb-1(for='process_request_id') Process Request ID
         else 
           label.mb-1(for='process_request_id') ID de requisição
@@ -25,32 +25,32 @@
             = data.process_request_id
     .form-row
       .form-group.col-md-6
-        if(language == 0)
+        if(language == 'en')
           label.mb-1(for='type') Type
         else 
           label.mb-1(for='type') Tipo
         input#type.form-control(disabled type='text'  value=data.type)
       .form-group.col-md-6
-        if(language == 0)
+        if(language == 'en')
           label.mb-1(for='id') Data Id
         else 
           label.mb-1(for='id') ID do Dado
         input#id.form-control(disabled type='text'  value=data.id)
     .form-group
-        if(language == 0)
+        if(language == 'en')
           label.mb-1(for='magnet_link') Data's Magnetic Link
         else 
           label.mb-1(for='magnet_link') Link Magnético do Dado
         input#owners.form-control(disabled type='text' value= data.metadata.magnet_link)
     .form-group
-      if(language == 0)
+      if(language == 'en')
         label.mb-1(for='uploader') Uploader
       else 
         label.mb-1(for='uploader') Dono
       input#uploader.form-control(disabled type='text' value= data.uploader)
     .form-row
       .form-group.col-md-6
-        if(language == 0)
+        if(language == 'en')
           label.mb-1(for='created_at') Created At
         else 
           label.mb-1(for='created_at') Criado em
