--- a/application/views/processableData/show.pug
+++ b/application/views/processableData/show.pug
@@ -22,7 +22,7 @@ block content
               label.mb-1(for='id') ID
               input#id.form-control(disabled type='text'  value=processRequest.id)
           .form-group
-            if(language == 0)  
+            if(language == 'en')  
               label.mb-1(for='created_at') Created At
             else 
               label.mb-1(for='created_at') Criado em
