--- a/application/views/account/show.pug
+++ b/application/views/account/show.pug
@@ -4,12 +4,12 @@ block append header
 
 block content
   .container.mt-4
-    if(language == 0)
+    if(language == 'en')
       h1 User Detail
     else 
       h1 Detalhes de usuário
     .card.mb-4
-      if(language == 0)
+      if(language == 'en')
         .card-header User
       else
         .card-header Usuário
@@ -17,13 +17,13 @@ block content
         form
           .form-row
             .form-group.col-md-6
-              if(language == 0)
+              if(language == 'en')
                 label.mb-1(for='name') Name
               else 
                 label.md-1(for='name') Nome
               input#name.form-control(disabled type='text' value= account.name)
             .form-group.col-md-6
-              if(language == 0)
+              if(language == 'en')
                 label.mb-1(for='address') Address
               else 
                 label.mb-1(for='address') Endereço
@@ -31,20 +31,20 @@ block content
               input#address.form-control(disabled type='text'  value=account.address)
           .form-row
             .form-group.col-md-6
-              if(language == 0)
+              if(language == 'en')
                 label.mb-1(for='balance') Balance
               else 
                 label.mb-1(for='balance') Balanço
 
               input#balance.form-control.bio-money(disabled type='text' value= account.balance)
             .form-group.col-md-6
-              if(language == 0)
+              if(language == 'en')
                 label.mb-1(for='created_at') Created At
               else 
                 label.mb-1(for='created_at') Criado em
 
               input#id.form-control(disabled type='text'  value=account.created_at)
-        if(language == 0)
+        if(language == 'en')
           .card-header Available Tokens
         else 
           .card-heade Tokens Disponíveis 
@@ -53,25 +53,25 @@ block content
             form
               .form-row
                 .form-group.col-md-3
-                  if(language == 0)
+                  if(language == 'en')
                     label.mb-1(for='type') Type
                   else 
                     label.mb-1(for='type') Tipo
                   input#type.form-control(disabled type='text' value= token.type)
                 .form-group.col-md-3
-                  if(language == 0)
+                  if(language == 'en')
                     label.mb-1(for='value') Value
                   else 
                     label.mb-1(for='value') Valor
                   input#value.form-control.bio-money(disabled type='text'  value=token.value)
                 .form-group.col-md-3
-                  if(language == 0)
+                  if(language == 'en')
                     label.mb-1(for='payment-intention-id') PaymentIntentionId
                   else 
                     label.mb-1(for='payment-intention-id') Id de Intenção de Pagamento
                   input#payment-intention-id.form-control(disabled type='text' value= token.payment_intention_id)
                 .form-group.col-md-3
-                  if(language == 0)
+                  if(language == 'en')
                     label.mb-1(for='expiration-date') Expiration Date
                   else 
                     label.mb-1(for='expiration-date') Data de Validade
