--- a/application/views/account/transfer/transfer-error.pug
+++ b/application/views/account/transfer/transfer-error.pug
@@ -5,7 +5,7 @@ block append header
 block content
     .container-fluid
         - var value = "string"
-        if(language == 0)
+        if(language == 'en')
             h1.px-3.mt-4  Error: your transaction was not processed
             script.
                 message="#{message}"
