--- a/application/views/data/components/operation-table.pug
+++ b/application/views/data/components/operation-table.pug
@@ -6,7 +6,7 @@
     .table-responsive
       table#dataTable.table.table-bordered(width='100%' cellspacing='0')
         thead
-          if(language == 0)  
+          if(language == 'en')  
             tr
               th Created At
               th Type
