--- a/application/views/data/list-operations.pug
+++ b/application/views/data/list-operations.pug
@@ -5,7 +5,7 @@ block append header
 
 block content
   .container-fluid
-    if(language == 0)
+    if(language == 'en')
       h1.mb-4 Operation History
     else 
       h1.mb-4 Histórico de Operação
