--- a/application/views/data/processed-data-new.pug
+++ b/application/views/data/processed-data-new.pug
@@ -10,7 +10,7 @@ block content
         .col-lg-12
           .p-5
             .text-center
-              if(language == 0)
+              if(language == 'en')
                 h1.h4.text-gray-900.mb-4 Send a processed DNA data
               else  
                 h1.h4.text-gray-900.mb-4 Envie um dado de DNA processado
@@ -18,31 +18,31 @@ block content
               p.mb-4
             form.user(action='/data/processed-data-create' method='post')
               .form-group
-                if(language == 0)
+                if(language == 'en')
                   label(for='process_request_id') Process request ID (Optional)
                 else 
                   label(for='process_request_id') ID da requisição (Opcional)
                 input#process_request_id.form-control.form-control-user(name='process_request_id' type='text' value=queryParams.processRequestId)
               .form-group
-                if(language == 0)
+                if(language == 'en')
                   label(for='name') Name
                 else 
                   label(for='name') Nome
                 input#name.form-control.form-control-user(name='metadata[title]' type='text' required)
               .form-group
-                if(language == 0)
+                if(language == 'en')
                   label(for='description') Description
                 else
                   label(for='description') Descrição
                 textarea#exampleFormControlTextarea1.form-control(name='metadata[description]' rows='3' type = 'text' required)
               .form-group
-                if(language == 0)
+                if(language == 'en')
                   label(for='magnet_link') DNA magnetic link
                 else
                   label(for='magnet_link') Link magnético do DNA
                 input#magnet_link.form-control.form-control-user(name='metadata[magnet_link]' type='text' required)
               .form-group
-                if(language == 0)
+                if(language == 'en')
                   label(for='secret_key') Secret Key
                 else
                   label(for='secret_key') Chave Secreta
@@ -52,7 +52,7 @@ block content
               hr
               .float-right.mb-4.inline-block
                 a.btn.btn-danger.btn-user.mr-3.px-5(href='/data')
-                  if(language == 0)
+                  if(language == 'en')
                     | Cancel
                   else 
                     | Cancelar
