--- a/application/views/data/raw-data-new.pug
+++ b/application/views/data/raw-data-new.pug
@@ -10,32 +10,32 @@ block content
         .col-lg-12
           .p-5
             .text-center
-              if(language == 0)
+              if(language == 'en')
                 h1.h4.text-gray-900.mb-4 Create raw DNA data
               else 
                 h1.h4.text-gray-900.mb-4 Criar dado de DNA bruto
               p.mb-4 
             form.user(action='/data/raw-data-create' method='post')
               .form-group
-                if(language == 0)
+                if(language == 'en')
                   label(for='title') Name
                 else 
                   label(for='title') Nome
                 input#title.form-control.form-control-user(name='metadata[title]' type='text' required)
               .form-group
-                if(language == 0)
+                if(language == 'en')
                   label(for='description') Description
                 else 
                   label(for='description') Descrição
                 textarea#exampleFormControlTextarea1.form-control(name='metadata[description]' rows='3' type = 'text' required)
               .form-group
-                if(language == 0)
+                if(language == 'en')
                   label(for='magnet_link') Magnetic Link
                 else 
                   label(for='magnet_link') Link Magnético
                 input#organization.form-control.form-control-user(name='metadata[magnet_link]' type='text' required)
               .form-group
-                if(language == 0)
+                if(language == 'en')
                   label(for='secret_key') Secret Key
                 else
                   label(for='secret_key') Chave Secreta
@@ -45,7 +45,7 @@ block content
               hr
               .float-right.mb-4.inline-block
                 a.btn.btn-danger.btn-user.mr-3.px-5(href='/data')
-                  if(language == 0)
+                  if(language == 'en')
                     | Cancel
                   else 
                     | Cancelar
