--- a/application/views/data/show.pug
+++ b/application/views/data/show.pug
@@ -5,51 +5,51 @@ block append header
 
 block content
   .container.mt-4
-    if(language == 0)
+    if(language == 'en')
       h1 Show Data
     else 
       h1 Ver Dados
     .card.mb-4
       .card-header.d-flex.justify-content-between.align-items-center
-        if(language == 0)
+        if(language == 'en')
           | Data
         else 
           | Dados
         div
           if(dnaContract)
             a.btn.btn-primary.btn-sm.mr-4(href='/dnaContract/'+ dnaContract.id)
-              if(language == 0)
+              if(language == 'en')
                 | See Smart Contract
               else 
                 | Ver Contrato Inteligente
           else if(data.process_request_id)
             a.btn.btn-primary.btn-sm.text-white.mr-2(data-toggle="modal" data-target="#endorseModal" title="Buy DNA")
-              if(language == 0)
+              if(language == 'en')
                 | Endorse DNA
               else 
                 | Validar DNA
           else if( !data.process_request_id )
             a.btn.btn-danger.btn-sm.mr-4(href='/dnaContract/new/'+data.id)
-              if(language == 0)
+              if(language == 'en')
                 | Create Smart Contract
               else 
                 | Criar Contrato Inteligente
 
           if(data.type=='Raw')
             a.btn.btn-primary.btn-sm.mr-4(href='/process-request?search='+data.key)
-              if(language == 0)
+              if(language == 'en')
                 | See Processing Request
               else 
                 | Ver Requisição de Processamento
               
           a.btn.btn-secondary.btn-sm.mr-4(href=data.key+'/list-operations')
-            if(language == 0)
+            if(language == 'en')
               | See History Operation
             else 
               | Ver Histórico de Operação
 
           a.btn.btn-primary.btn-sm(href='/dnaKey/' + data.id)
-            if(language == 0)
+            if(language == 'en')
               | See Decryption Key
             else 
               | Ver chave de descriptografia
@@ -61,7 +61,7 @@ block content
           table#dataTable.table.table-bordered(width='100%' cellspacing='0')
             thead
               tr 
-                if(language == 0)
+                if(language == 'en')
                   th Owner ID
                 else 
                   th ID do Dono
