--- a/application/views/dnaContract/components/royalty-payment.pug
+++ b/application/views/dnaContract/components/royalty-payment.pug
@@ -1,6 +1,6 @@
 .form-row.royalty-payment
   .form-group.col-md-4
-    if(language == 0)
+    if(language == 'en')
       label.mb-1(for='price') Type
     else 
       label.mb-1(for='price') Tipo
@@ -13,7 +13,7 @@
         'profit_proportional_periodic_fee'- with a periodic payment, proportional to product profit (e.g. 5%);\
         ")
     select#custom-select.form-control.dropdown-toggle.royalty-payment-select(name="royalty_payments["+index+"][type]" type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-      if(language == 0)
+      if(language == 'en')
         option(disabled=true selected=true) -- select an option -- 
         option(value='no_royalties') No Royalties
         option(value='fixed_one_time_fee') Fixed One Time Fee 
@@ -30,13 +30,13 @@
         option(value='proportional_periodic_fee') Taxa periódica proporcional
         option(value='profit_proportional_periodic_fee') Taxa periódica proporcional ao lucro
   .form-group.col-md-2
-    if(language == 0)
+    if(language == 'en')
       label.mb-1(for='value') Value 
     else 
       label.mb-1(for='value') Valor 
     input#price.form-control.royalty-payment-value(name="royalty_payments["+index+"][value]" type='text' disabled=true required)
   .form-group.col-md-2
-    if(language == 0)
+    if(language == 'en')
       label.mb-1(for='period') Period in months
     else 
       label.mb-1(for='period') Período em meses
