--- a/application/views/dnaKey/show.pug
+++ b/application/views/dnaKey/show.pug
@@ -4,12 +4,12 @@ block append header
 
 block content
   .container.mt-4
-    if(language == )
+    if(language == 'en')
       h1 DnaKey
     else 
       h1 Chave de DNA
     .card.mb-4
-      if(language == 0)
+      if(language == 'en')
         .card-header Your DNA Decryption Key
       else 
         .card-header Sua Chave de descriptografia de DNA
@@ -21,7 +21,7 @@ block content
               input#dnaId.form-control(disabled type='text' value= dnaKey.dnaId)
           .form-row     
             .form-group.col-md-12
-              if(language == 0)
+              if(language == 'en')
                 label.mb-1(for='address') Secret Key
               else 
                 label.mb-1(for='address') Chave Secreta
