--- a/application/views/processRequest/components/process-request-table.pug
+++ b/application/views/processRequest/components/process-request-table.pug
@@ -1,6 +1,6 @@
 .card.shadow.mb-4
   .card-header.py-3
-    if(language == 0)
+    if(language == 'en')
       h6.m-0.font-weight-bold.text-primary Process Requests
     else  
       h6.m-0.font-weight-bold.text-primary Requisições de Processo
@@ -8,7 +8,7 @@
     .table-responsive
       table#dataTable.table.table-bordered(width='100%' cellspacing='0')
         thead
-          if(language == 0)
+          if(language == 'en')
             tr
               th Status
               th Created At
