--- a/application/views/processRequest/index.pug
+++ b/application/views/processRequest/index.pug
@@ -6,7 +6,7 @@ block append header
 block content
   .container-fluid
     .d-flex.flex-row.justify-content-between.mb-4
-      if(language == 0)
+      if(language == 'en')
         h1.d-inline Process Requests
       else 
         h1.d-inline Requisição de Processo
