--- a/application/views/processableData/components/data-table.pug
+++ b/application/views/processableData/components/data-table.pug
@@ -1,6 +1,6 @@
 .card.shadow.mb-4
   .card-header.py-3
-    if(language == 0)
+    if(language == 'en')
       h6.m-0.font-weight-bold.text-primary Raw DNA list
     else 
       h6.m-0.font-weight-bold.text-primary Lista de DNA bruto
@@ -8,7 +8,7 @@
     .table-responsive
       table#dataTable.table.table-bordered(width='100%' cellspacing='0')
         thead
-          if(language == 0)
+          if(language == 'en')
             tr
               th Title
               th Collector
