--- a/application/views/processableData/index.pug
+++ b/application/views/processableData/index.pug
@@ -5,7 +5,7 @@ block append header
 
 block content
   .container-fluid
-    if(language == 0)
+    if(language == 'en')
       h1.mb-4 Data to be processed
     else 
       h1.mb-4 Dados para serem processados
